<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:autofillHints="none"
            android:background="@drawable/label_bg"
            android:enabled="false"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:textColor="#737373"
            android:textColorHint="#d9d9d9"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/room_code_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="none"
                android:background="@drawable/label_bg"
                android:hint="@string/roomCode"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="25dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textColorHint="#d9d9d9"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/joinBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@drawable/btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/join"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/create_room_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/btn"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:text="@string/createRoom"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:cardElevation="0dp"
            android:elevation="0dp"
            app:cardCornerRadius="999dp">

<!--            todo continue-->
            <ImageView
                android:id="@+id/profile_pic_home"
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/user"
                android:tooltipText="@string/profile" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/logout_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/ic_baseline_power_settings_new_24"
            android:tooltipText="@string/power_off" />

    </LinearLayout>

</RelativeLayout>