<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChatActivity">

    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:tooltipText="@string/exit" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="9999dp"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pic"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/room_label"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversation"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/endRoom"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/end_room"
            android:src="@drawable/ic_baseline_call_end_24"
            android:tooltipText="@string/end_room"/>

    </LinearLayout>

    <ListView
        android:scrollbars="none"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/listView"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/message"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/typing_lyt"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/typing_img"
            android:contentDescription="@null"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_more_horiz_24"/>

        <TextView
            android:id="@+id/typing_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/msg_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textbox"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:autofillHints="none"
            android:background="#f8f8f8"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:hint="@string/textbox_hint"
            android:imeOptions="normal"
            android:inputType="textCapSentences|textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="#d9d9d9"
            android:textSize="15sp"/>

        <ImageView
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/send_btn"
            android:contentDescription="@null"
            android:padding="9dp"
            android:src="@drawable/ic_baseline_send_24"
            android:layout_marginEnd="12dp"
            android:background="@drawable/send"
            android:layout_width="33dp"
            android:layout_height="33dp"/>

    </LinearLayout>

</LinearLayout>